Add dependencies and plugins in itdoes-business-war pom.xml (Still need to remove unused dependencies)